# docker_kubernetes_practical_guide

./: .gitignore  README.md
_notes/: 01-intro.md  02-docker-images-and-containers.md  03-managing-data-and-working-with-volumes.md  04-cross-container-communication.md  05-docker-compose.md  06-utility-containers-and-executing-commands.md  07-deploying-docker-containers.md  08-getting-started-with-kubernetes.md  09-kubernetes-in-action.md  10-managing-data-and-volumes-with-kubernetes.md  11-kubernetes-networking.md  12-kubernetes-deployment.md
exercices/02-node-based-container/: Dockerfile  package.json
exercices/03-interactive-mode/: main.py
exercices/04-copy-files/: main.py
exercices/06-sharing-images/: main.py
exercices/07-kinds-of-data/: Dockerfile  server.js
exercices/08-bind-mount/: Dockerfile  app.js  package.json
exercices/09-external-connection/: Dockerfile
exercices/09-http-request/: Dockerfile  main.py  requirements.txt
exercices/10-containerized-fullstack-app/: README.md  docker-compose.yaml
exercices/11-utility-container/: .dockerignore  Dockerfile  docker-compose.yaml
exercices/12-laravel-dockerized-project/: README.md  docker-compose.yaml
exercices/13-docker-deploy/: README.md
exercices/14-first-kubernetes-deployment/: README.md
exercices/15-kubernetes-volume/: Cargo.toml  README.md  deployment.yaml  docker-compose.yaml  service.yaml
exercices/16-networking/: README.md  build-and-push-to-docker-hub.sh  (+1 more)
exercices/16-networking/tasks_api/: Cargo.toml  Dockerfile
exercices/16-networking/tasks_api/src/: main.rs
(+79 files in other folders)
