[package]
name = "tasks_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.1"
http = "1.2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
